# bacon-ai-boards

./: README.md
.github/workflows/: codeql-analysis.yml  scorecards-analysis.yml
claude-integration/: README.md
claude-integration/docker/: docker-compose.yml
claude-integration/docker/claude-proxy/: Dockerfile  package-lock.json  package.json  server.js
claude-integration/docs/: AI_VENDOR_CAPABILITY_REPORT.md  FOCALBOARD_REST_API.md
claude-integration/scripts/: add_content_blocks.py  complete_task_update.py  create_bacon_ai_tasks.sh  create_bacon_ai_tasks_v2.sh  create_bacon_ai_tasks_v3.sh  fix_content_blocks.py  fix_remaining_tasks.py  set_task_ids.sh  set_task_ids_v2.py  update_phases_and_content.py  update_task_descriptions.py  update_tasks_comprehensive.py
claude-integration/server/api/: ai.go
documentation/architecture/: BACON-AI-TEMPLATE-LIBRARY-ARCHITECTURE.md  IMPLEMENTATION-PRIORITIES.md
documentation/bacon-ai/: BPMN-IMPORT-EXPORT-PLAN.md  project-manifest.json  session-log_20260206_061506.md
documentation/bacon-ai/phase-1-json/: ORCHESTRATION-LOG.md
mcp-focalboard-server/: README.md  USE_CASES.md  claude-code-config.json  export_template.py  pyproject.toml  server.py  test_deterministic_workflow.py  test_instantiate.py  test_templates.py  test_view_creation.py
server/model/: version.go
webapp/: webpack.common.js
webapp/i18n/: en.json
webapp/src/: constants.ts  sit1-xml-roundtrip.test.ts
webapp/src/components/: newVersionBanner.tsx  topBar.tsx
webapp/src/exporters/: bpmnExporter.test.ts  bpmnExporter.ts  jsonExporter.test.ts  (+3 more)
(+30 files in other folders)
