[project]
name = "mcp-focalboard-server"
version = "0.1.0"
description = "MCP Server for Focalboard - Project management tool integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BACON-AI Team"}
]
keywords = ["mcp", "focalboard", "project-management", "kanban"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-focalboard = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
